syntax = "proto3";

import "google/protobuf/timestamp.proto";

package get_info.v1;

enum RequestValues {
  REQUEST_VALUES_OCID = 0;
  REQUEST_VALUES_EMAIL = 1;
  REQUEST_VALUES_USER_NAME = 2;
  REQUEST_VALUES_DISPLAY_NAME = 3;
  REQUEST_VALUES_STATUS = 4;
  REQUEST_VALUES_AVATAR_KEY = 5;
  REQUEST_VALUES_REGISTER_TIME = 6;
  REQUEST_VALUES_PUBLIC_UPDATE_TIME = 7;
  REQUEST_VALUES_UPDATE_TIME = 8;
  REQUEST_VALUES_SESSIONS = 9;
  REQUEST_VALUES_FRIENDS = 10;
}

message GetAccountInfoRequest {
  string ocid = 1;
  repeated RequestValues request_values = 2;
}

message GetAccountInfoResponse {
  optional string ocid = 1;
  optional string email = 2;
  optional string user_name = 3;
  optional string display_name = 4;
  optional string status = 5;
  optional string avatar_key = 6;
  optional google.protobuf.Timestamp register_time = 7;
  optional google.protobuf.Timestamp public_update_time = 8;
  optional google.protobuf.Timestamp update_time = 9;
  optional string sessions = 10;
  repeated string friends = 11;
}
