syntax = "proto3";

package login;

message LoginRequest {
  oneof account {
    string email = 1;
    string ocid = 2;
  };
  string password = 3;
}

message LoginResponse {
  string token = 1;
  string ocid = 2;
}