syntax = "proto3";

package set_info;

message SetSelfInfoRequest {
  optional string user_name = 2;
  optional string avatar_key = 3;
  optional int32 status = 4;
}

message SetFriendInfoRequest {
  string ocid = 1;
  optional string display_name = 2;
}

message SetAccountInfoResponse {}