syntax = "proto3";

package service.auth;

import "service/auth/authorize/authorize.proto";
import "service/auth/email_verify/email_verify.proto";
import "service/auth/register/register.proto";

service AuthService {
  rpc Register(service.auth.register.RegisterRequest) returns (service.auth.register.RegisterResponse);

  rpc Auth(service.auth.authorize.AuthRequest) returns (service.auth.authorize.AuthResponse);

  rpc Verify(service.auth.email_verify.VerifyRequest) returns (stream service.auth.email_verify.VerifyResponse);
}
