syntax = "proto3";

package service.basic.server.v1;

// Server status
enum RunningStatus {
  RUNNING_STATUS_UNSPECIFIED = 0;
  RUNNING_STATUS_NORMAL = 1;
  RUNNING_STATUS_MAINTAINING = 2;
}

// Server version
message ServerVersion {
  int32 major = 1;
  int32 minor = 2;
  int32 patch = 3;
}

// Get server info response
message GetServerInfoResponse {
  // Server status
  RunningStatus status = 1;
  uint32 http_port = 2;
  ServerVersion server_version = 3;
}
